@startuml - Design Class Diagram (DCD) Budweg
left to right direction 

package "ViewModel (Application)"{
    class MainViewModel {
        - brakeCaliberRepository: BrakeCaliberRepository
        - stationRepository: StationRepository
        - sparePartRepository: SparePartRepository
        + MainViewModel(brakeCaliberRepository: BrakeCaliberRepository,
        stationRepository: StationRepository, sparePartRepository: SparePartRepository)
    }
}

package "Infrastructure (Repositories)" {
    class BrakeCaliberRepository {
        - «readonly» connectionString : string
        - brakeCaliber : BrakeCaliber[0..*]
        + CreateBrakeCaliber()
        + FindByBarcode(barcode: String): BrakeCaliber
        + MoveToNextStation(caliberNumber: String)
        + UpdateStatus(caliberNumber: String, status: ProcessingStatus)
        + ListByStation(stationName: String): BrakeCaliber[0..*]

    }
    class StationRepository {
        - «readonly» connectionString : string
        - station : Station[0..*] 
        + CreateStation()
        + FindByName(stationName: String): Station
        + ListAllStations(): Station[0..*]
        + GetNextStation(stationName: String): Station
    }
    class SparePartRepository {
        - «readonly» connectionString : string
        - sparePart : SparePart[0..*]
        + CreateSparePart()
        + FindByStation(stationName: String): SparePart[0..*]
        + AddSparePart(sparePartType: String, sparePartQuantity: int, stationName: String)
        + UpdateQuantity(sparePartType: String, sparePartQuantity: int)
    }
}

package "Model (Domain)" {
    class Station {
        + stationId: int
        - stationType: String
        - stationName: String
        + «constructor» Station(id : int)
    }

    class BrakeCaliber {
        + caliberId: int
        - caliberType: String
        - caliberStatus: ProcessingStatus
        - barcode: String
        - caliberNumber: String
        - orderNumber: String 
        - note: String
        + «constructor» BrakeCaliber(id : int)
    }

    class ProcessingStatus <<enumeration>> {
        received
        disassembled
        scrapped
        dispatched
    }

    class SparePart{
       + sparePartId: int
       - sparePartType: String
       - sparePartQuantity: int
       + «constructor» SparePart(id : int)
    }
}



MainViewModel .. StationRepository
MainViewModel .. BrakeCaliberRepository
MainViewModel .. SparePartRepository

StationRepository .. Station
BrakeCaliberRepository .. BrakeCaliber
SparePartRepository .. SparePart

BrakeCaliber "0..*" -- "1..*" Station
ProcessingStatus .. BrakeCaliber
SparePart "0..*" -- "1..*" Station


hide circle

@enduml